_sass/_components.scss
h2, h3 {
  margin-top: 24px;
}

.text-white {
  color: $white;
}

.text-bold {
  font-weight: 800;
}

body  {
  background-image: url("../img/bg.svg");
  background-repeat: no-repeat;
  background-size: 100% auto;

  @include breakpoint(medium) {
    background-size: 150% auto;
  }

  @include breakpoint(large) {
    background-size: 100% auto;
  }
}

body.home {
  background-image: none;
}

.home-background {
  background-image: url("../img/bg-home-medium.svg");
  background-repeat: no-repeat;
  background-size: auto;
  padding-bottom: 32px;
  background-position: right top;

  @include breakpoint(large) {
    background-size: 100% auto;
  }

  @include breakpoint(xlarge) {
    background-image: url("../img/bg-home.svg");
  }
}

.home-hero {
  @include breakpoint(xlarge) {
    //padding-bottom: 30px;
  }
}

.home-hero__text {
  @include breakpoint(xlarge) {
    color: $white;
  }
}

.hero-text-bottom-padding {
  padding-bottom: 25px;
}

.big-bottom-padding {
  padding-bottom: 25px;
}

.top-nav {
  padding-top: 16px;
  padding-bottom: 16px;

  @include breakpoint(medium) {
    padding-top: 48px;
    padding-bottom: 90px;
  }
}


.menu > li > a {
  color: $white;

  &:focus,
  &:hover,
  &:active {
    text-decoration: underline;
  }
}

.btn.green {
  position: relative;

  padding: 12px 75px;
  background-color: $green;
  border-radius: 25px;
  box-shadow: 0 5px 1px 0 $green-shadow;

  font-weight: 800;
  color: $white;

  &:hover {
    top: -1px;
    box-shadow: 0 6px 1px 0 $green-shadow;
  }

  &:focus,
  &:active {
    top: 4px;
    box-shadow: 0 2px 2px 0 $green-shadow;
  }
}

.btn.yellow {
  position: relative;

  padding: 12px 75px;
  background-color: $yellow;
  border-radius: 25px;
  box-shadow: 0 5px 1px 0 $yellow-shadow;

  font-weight: 800;
  color: $black;

  &:hover {
    top: -1px;
    box-shadow: 0 6px 1px 0 $yellow-shadow;
  }

  &:focus,
  &:active {
    top: 4px;
    box-shadow: 0 2px 2px 0 $yellow-shadow;
  }
}

.mobile-header {
  position: relative;
}

.mobile-menu__close {
  position: relative;
  z-index: 30;
}

#mobile-menu {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 20;

  background-color: $light-gray;
  background: linear-gradient(180deg, $light-gray 80%, $medium-gray 80%);
  padding-bottom: 20px;
}

.mobile-menu__close {
  margin-top: 16px;
  margin-right: 20px;
  font-weight: 800;
}

.mobile-menu__ul {
  list-style: none;
  margin-top: 64px;
  padding-left: 30px;
}

.mobile-menu__ul li a {
  color: $black;
  font-weight: 800;
  font-size: 20px;
  line-height: 42px;
}

.mobile-menu__cta-wrapper {
  background-color: $medium-gray;
  width: 100%;
  text-align: center;

  padding-top: 50px;
  padding-bottom: 64px;
}

.mobile-menu__cracks {
  height: 70px;
  width: 100%;

  margin-top: 40px;

  background-image: url("../img/cracks.png");
  background-size: cover;
}

.footer-menu {
  list-style: none;
  margin-left: 0;
}

footer {
  padding: 32px 0;
}

.footer-menu li a {
  color: $black;
  text-decoration: underline;
  font-size: 13px;
  line-height: 19px

  &:focus,
  &:hover,
  &:active {
    color: $green;
    text-decoration: none;
  }
}

.text-footer {
  font-size: 13px;
  line-height: 19px;
}

.footer-dragon {
  height: 400px;
  width: 100%;
  margin-bottom: -40px;
  margin-top: 40px;

  background-image: url("../img/dragon.png");
  background-position: right;
  background-size: contain;
  background-repeat: no-repeat;
  pointer-events: none;

  body.home & {
    position: relative;
    z-index: -1;
    margin-top: -20px;
  }
}

.home-sponsors {
  position: relative;
  z-index: 10;
  margin-top: 32px;
}

.home-sponsors__cta {
  margin: 16px auto;
}

.home-sponsors__coorg {
  margin-top: 48px;
}

.home-sponsors__logo {
  margin-top: 16px;
}

.home-sponsors__logo img {
  max-width: 100%;
}

.home-newsletter {
  margin: 32px auto;
}

.home-twitter {
  min-height: 660px;
}

#mce-EMAIL {
  margin: 16px auto;
}

#mc_disclaimer {
  margin-top: 16px;
}

.lamp-mobile {
  height: 80px;
  width: 100%;
  margin: -36px auto 16px 32px;

  background-image: url("../img/lamp.png");
  background-size: auto 100%;
  background-repeat: no-repeat;

  @include breakpoint(medium) {
    display: none;
  }
}

.team__avatar {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 16px;
  border-radius: 100%;
  width: 200px;
}

.team__name {
}

